feat: add sentry (#54)
add sentry integration for error reporting

Fixes #53
